--- a/Forest_Deer/style.css
+++ b/Forest_Deer/style.css
@@ -9,35 +9,38 @@ body{
   background: url('src/background.jpg') center/cover no-repeat;
   height: 110vh;
 }
-#a-nav{
-  color: white;
-  transition: all 0.2s;
 
+
+/*-----------------------nav_structure_start---------------*/
+
+.navbar{
+  margin: 20px 10px;
+  display: flex;
+  justify-content: space-between;
 }
-#button-nav{
-  background-color: transparent;
-  border-color: white;
-  border-width: 1px;
-  border-style: solid;
-  padding: 8px 12px ;
-  border-radius: 6px;
-  font-weight: bold;
-  transition: all 0.2s;
-  
-}
-#button-nav:hover{
-  background-color: white;
-}
-#button-nav:hover #a-nav{
-  color: black;
+.nav-right{
+  display: flex;
+  justify-content: space-around;
 }
 
-.nav-a{
+.nav-right a{
+  margin: 0 20px;
+}
+
+.nav-right li{
+  display: inline-block;
+}
+/*-----------------------nav_structure_end---------------*/
+
+
+/*-------------------------nav_a_style_start-----------------------*/
+.nav-right a.link-basic{
   color: white;
   position: relative;
+  transition: all 0.2s;
 }
 
-.nav-a::after{
+.nav-right a.link-basic::after{
   content: '';
   height: 1.3px;
   background-color: white;
@@ -50,72 +53,88 @@ body{
   transition: transform 0.25s;/*动画效果写在这里才有用，写在a标签里面没用*/
 
 }
-.nav-a:hover::after{
+.nav-right a.link-basic:hover::after{
   transform: scaleX(1);
   transform-origin: left;
 }
-div.register a{
+
+.nav-right a.link-outline{
+  background-color: transparent;
+  border-color: white;
+  border-width: 1px;
+  border-style: solid;
+  padding: 6px 12px ;
+  border-radius: 6px;
+  font-weight: bold;
+  transition: all 0.2s;
   color: white;
-  text-decoration: underline;
-  transition: text-shadow 0.15s ease-in-out;
-}
-div.register a:hover{
-  text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
-}
-li{
-  display: inline-block;
-}
-nav{
-  margin: 10px 10px;
-  display: flex;
-  justify-content: space-between;
-}
-.nav-right{
-  display: flex;
-  justify-content: space-around;
   
 }
-
-.nav-right a{
-  margin: 0 20px;
+.nav-right a.link-outline:hover{
+  background-color: white;
+  color: black;
 }
+/*-------------------------nav_a_style_end-----------------------*/
 
 
-div.register{
+
+/*------------------------form_structure_start-------------------*/
+form.form-register{
   position: relative;
-  top: 40px;
+  top: 50px;
   width: 400px;
-  height: 450px;
+  min-height: 400px;
+  padding: 20px 0;/*这个属性搭上flex布局就能很好的调整高度了！不用设置height也能表现得十分完美*/
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+form.form-register h1{
+  margin: 25px auto;
+}
+
+div.input-group{
+  margin: 6px auto;
+  position: relative;
+}
+div.input-group i{
+  position: absolute;
+  bottom: 6px;
+  right: 5px;
+}
+.form-register hr{
+  border: none;/*去除默认样式*/
+  height: 1.5px;
+  width: 100%;/*确保它是线，如果设置成1px，其实就只是一个点*/
+  background-color: black;/*设置分割线的颜色，不是color，而是background-color！*/
+}
+
+div.form-protocol{
+  margin-top: 16px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+/*------------------------form_structure_end-------------------*/
+
+
+
+/*------------------------form_style_start-------------------*/
+
+.form-register{
   background-color: rgba(255,255,255,0.3);
   backdrop-filter: blur(10px);
   border-radius: 12px;
   box-shadow: 2px 4px 16px rgba(0,0,0,0.5);
 }
-div.register h1{
-  margin: 25px auto;
+
+
+.input-group i{
+  font-size: 16px;
 }
 
-div.input{
-  margin: 6px auto;
-  position: relative;
-}
-div.input i{
-  position: absolute;
-  font-size: 16px;
-  top: 11px;
-  left: 210px;
-}
-hr{
-  border: none;
-  height: 1.5px;
-  width: 100%;/*确保它是线，如果设置成1px，其实就只是一个点*/
-  background-color: black;/*设置分割线的颜色，不是color，而是background-color！*/
-}
-input{
+.input-group input{
   margin: 6px auto;
   padding: 4px 8px;
   width: 220px;
@@ -125,58 +144,52 @@ input{
   letter-spacing: 1px;
   font-weight: 600;
   font-family: "Roboto", sans-serif;
-
 }
-input::placeholder{
+.input-group input::placeholder{
   color: black;
   letter-spacing: 1.1px;
   font-weight: normal;
   font-family: "Roboto", sans-serif;
 }
-input:focus{
-  outline: none;
-
+.input-group input:focus{
+  outline: none;/*去除点击后的很丑的外边框*/
 }
 
-.register-protocol{
-  margin-top: 16px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-}
-.register-protocol p{
+.form-protocol p{
   margin-left: 6px;
 }
-.register-protocol input[type=checkbox]{
-  appearance: none;
+.form-protocol input[type=checkbox]{
+  appearance: none;/*完全清除默认样式*/
   -webkit-appearance: none;
   -moz-appearance: none;
   background-color: white;
   border: none;
   width: 14px;
-  height: 16px;
+  height: 14px;
   border-radius: 2px;
   cursor: pointer;
   position: relative;
   transition: all 0.15s ease-in-out;
 }
-.register-protocol input[type=checkbox]:hover{
+.form-protocol input[type=checkbox]:hover{
   box-shadow: 2px 2px 8px rgba(0,0,0,0.5);
 }
-.register-protocol input[type=checkbox]:checked{
+.form-protocol input[type=checkbox]:checked{
   background-color: rgb( 20, 37, 52);
   color: white;
 }
-.register-protocol input[type=checkbox]:checked::after{
+.form-protocol input[type=checkbox]:checked::after{
   content: '✔';
   width: 6px;
   height: 6px;
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-5.2px,-10px);
+  transform: translate(-5.2px,-10px);/*translate有两个属性，X和Y轴，是定位其元素的中心点*/
 }
-#button-register{
+
+
+.btn-primary{
   margin-top: 15px;
   margin-bottom: 15px;
   width: 230px;
@@ -188,14 +201,25 @@ input:focus{
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
-#button-register:hover{
+.btn-primary:hover{
   opacity: 0.85;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
-#button-register:active{
+.btn-primary:active{
   box-shadow: none;
 }
 
-.register-protocol p,p.login{
+
+.form-register p{
   font-family: "Funnel Sans", sans-serif;
 }
+.form-register a{
+  color: white;
+  text-decoration: underline;
+  transition: text-shadow 0.15s ease-in-out;
+}
+.form-register a:hover{
+  text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+}
+/*------------------------form_style_end-------------------*/
+
